# tool_manager

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml  requirements.txt
.ebextensions/: 01-worker.config  django.config  nginx.config
.github/workflows/: django.yml
base/: asgi.py  settings.py  urls.py  wsgi.py
holders/: models.py  views.py
holders/migrations/: 0002_alter_holder_dh1_a_alter_holder_dh1_b_and_more.py
holders/tests/: test_forms.py  test_urls.py  test_views.py
machines/: context_processors.py  forms.py  models.py  urls.py  views.py
machines/migrations/: 0001_initial.py  0002_alter_machine_author_alter_machine_description_and_more.py
machines/tests/: test_urls.py
notifications/: admin.py  apps.py  factories.py  handlers.py  signals.py  urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_alter_notification_created_at_and_more.py  0002_notification_user_comment_usernotification.py
notifications/tests/: test_views.py
tool_manager/: Dockerfile  asgi.py  db_new.sqlite3  db_podzial_apek.sqlite3  db_test.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  settings.py  urls.py  wsgi.py
tool_manager/holders/: admin.py  apps.py  factories.py  forms.py  models.py  urls.py  views.py
tool_manager/machines/: factories.py  forms.py  models.py  urls.py  (+2 more)
tools/: factories.py  forms.py  urls.py  views.py
tools_assembly/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
users/: apps.py  forms.py  models.py  signals.py  views.py
(+136 files in other folders)
