[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 120

[tool.black]
line-length = 120

[tool.poetry]
name = "tool-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = ">=4.2.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.5.0"
faker = "19.6.2"
factory-boy = "3.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
