[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 120

[tool.black]
line-length = 120

[tool.poetry]
name = "tool-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.14"
boto3 = "1.33.11"
pillow = "10.3.0"
crispy-bootstrap4 = "2022.1"
django-crispy-forms = "2.0"
django-environ = "0.11.2"
django-extensions = "3.2.3"
django-storages = "1.14.2"
django-weasyprint = "2.2.1"
fontawesomefree = "6.4.2"
psycopg2-binary = "2.9.9"
weasyprint = "59.0"
pandas = "2.0.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.5.0"
faker = "19.6.2"
factory-boy = "3.3.0"
mypy-extensions = "1.0.0"
typing-extensions = "4.7.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
